@@ -57,7 +57,7 @@ Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0900
 Archive::Libarchive::XS                        = 0.0900
 Authen::Simple::PlugAuth                       = 0.01
-Clustericious                                  = 1.00
+Clustericious                                  = 1.02
 Clustericious::Admin                           = 0.25
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.04
@@ -68,7 +68,7 @@ Dist::Zilla::Plugin::OurPkgVersion             = 0.06
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.05
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.84
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.85
 FFI                                            = 1.09
 FFI::CheckLib                                  = 0.14
 FFI::ExtractSymbols                            = 0.03
@@ -93,6 +93,7 @@ Photography::EV                                = 0.06
 PkgConfig                                      = 0.09026
 PlugAuth                                       = 0.30
 PlugAuth::Client::Tiny                         = 0.01
+PlugAuth::Client::Tiny::Apache2AuthenHandler   = 0.02
 PlugAuth::Plugin::AuthenSimple                 = 0.01
 PlugAuth::Plugin::DBIAuth                      = 0.04
 PlugAuth::Plugin::Finger                       = 0.01
@@ -102,7 +103,7 @@ Shell::Guess                                   = 0.06
 String::Template                               = 0.18
 Term::EditLine                                 = 0.08
 Test::CChecker                                 = 0.06
-Test::Clustericious::Cluster                   = 0.21
+Test::Clustericious::Cluster                   = 0.23
 Test::Fixme                                    = 0.15
 Test::Script                                   = 1.10
 Test::Version                                  = 2.03
@@ -115,7 +116,8 @@ Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.02
 Win32API::ProcessStatus                        = 0.05
 WWW::Bugzilla::BugTree                         = 0.05
-Yars                                           = 1.09
+Yars                                           = 1.12
+Yars::Command::yars_exercise                   = 0.02
 
 App::cpanminus                                 = 0
 autodie                                        = 0
