@@ -97,6 +97,7 @@ Photography::EV
 PkgConfig
 PlugAuth
 PlugAuth::Client::Tiny
+PlugAuth::Client::Tiny::Apache2AuthenHandler
 PlugAuth::Plugin::AuthenSimple
 PlugAuth::Plugin::DBIAuth
 PlugAuth::Plugin::Finger
@@ -151,5 +152,6 @@ XML::Writer
 YAML
 YAML::XS
 Yars
+Yars::Command::yars_exercise
 autodie
 local::lib
